<resources>
    <string name="app_name">MyApplication</string>
    <string name="benvenuto_nella_schermata_di_login">Benvenuto nella schermata di login</string>
    <string name="nome">Nome</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="save_concert">Save Concert</string>
    <string name="artist">Artist</string>
</resources>